Fix for overflowing contest menu

--- a/app/assets/stylesheets/contests.css.scss
+++ b/app/assets/stylesheets/contests.css.scss
@@ -17,7 +17,7 @@ $item_width: 75px;
     /* margin-left: 50px; */
     position:relative;
     display:block;
-    width: 115%; /* was 1300px */
+    width: 110%; /* was 1300px */
     li{
       float: left;
       width: $item_width;
